<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/galaxy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/galaxy"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greg_rakozy_ompaz_dn_9i_unsplash" />

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="248dp"
        android:layout_height="201dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="265dp"
        android:contentDescription="@string/applogo"
        android:translationX="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ufo_lofo_removebg_preview" />

    <TextView
        android:id="@+id/Cosmopass"
        android:layout_width="302dp"
        android:layout_height="76dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="534dp"
        android:fontFamily="cursive"
        android:text="@string/cosmopass"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#CDDF2A"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>